# skialith

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
.cargo_home/: .global-cache
.cargo_home/registry/cache/index.crates.io-1949cf8c6b5b557f/: async-nats-0.33.0.crate  base64-url-1.4.13.crate  nats-0.25.0.crate  nkeys-0.3.2.crate  nkeys-0.4.5.crate  nuid-0.3.2.crate  nuid-0.5.0.crate  serde_nanos-0.1.4.crate  signatory-0.27.1.crate  sqlx-0.7.4.crate  sqlx-core-0.7.4.crate  sqlx-macros-0.7.4.crate  sqlx-macros-core-0.7.4.crate  sqlx-mysql-0.7.4.crate  sqlx-postgres-0.7.4.crate  sqlx-sqlite-0.7.4.crate
.cargo_target/: .rustc_info.json
.cargo_target/debug/.fingerprint/ahash-2236a0005ba00f96/: build-script-build-script-build  build-script-build-script-build.json
.cargo_target/debug/.fingerprint/ahash-d91c7b22749ce1f6/: run-build-script-build-script-build  run-build-script-build-script-build.json
.cargo_target/debug/.fingerprint/ahash-e027e4bc6931921d/: lib-ahash  lib-ahash.json
.cargo_target/debug/.fingerprint/ahash-f764fddbcdf87b5f/: lib-ahash  lib-ahash.json
.cargo_target/debug/.fingerprint/aho-corasick-b5980f024edf967b/: lib-aho_corasick  lib-aho_corasick.json
.cargo_target/debug/.fingerprint/allocator-api2-40dfa3cd816921ed/: lib-allocator_api2  lib-allocator_api2.json
.cargo_target/debug/.fingerprint/allocator-api2-efc7c71b807ecd50/: lib-allocator_api2  lib-allocator_api2.json
.cargo_target/debug/.fingerprint/async-channel-e65e94a7b1110771/: lib-async_channel  lib-async_channel.json
.cargo_target/debug/.fingerprint/async-nats-16229b14186fa40a/: lib-async_nats  lib-async_nats.json
.cargo_target/debug/.fingerprint/async-nats-faf89ff2a4dcde22/: lib-async_nats  lib-async_nats.json
.github/workflows/: ci.yml  deploy-website.yml
docker/: mysql-init.sql
migrations/: 20260325000001_create_agent_events.sql  20260325000002_create_agent_traces.sql
sdks/python/: README.md  pyproject.toml
sdks/python/durable_agent/: __init__.py  client.py  langchain.py
sdks/python/skialith/: __init__.py  client.py  langchain.py
sdks/typescript/: README.md  package.json  tsconfig.json
sdks/typescript/src/: index.ts
src/: agent_manager.rs  agent_trace.rs  durable_event_store.rs  instance_lock.rs  lib.rs  license.rs  limits.rs  main.rs  resurrection.rs  trace_ingest.rs
src/managed/: metrics.rs  mod.rs  replication.rs  retention.rs
website/: astro.config.mjs  package-lock.json  package.json
website/public/: llms.txt
website/src/layouts/: Base.astro
website/src/pages/: index.astro
(+984 files in other folders)
