[package]
name = "durable_agent_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-nats = "0.33" # High-perf NATS client
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "json", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15" # For managing DB credentials
thiserror = "2.0"
futures = "0.3"
bytes = "1"
