[package]
name = "durable_agent_core"
version = "0.1.0"
edition = "2024"

[features]
# Internal flag — never enabled in OSS releases.
# The managed service builds with: cargo build --features managed
managed = []

[dependencies]
tokio = { version = "1", features = ["full"] }
async-nats = "0.33" # High-perf NATS client
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "json", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15" # For managing DB credentials
thiserror = "2.0"
futures = "0.3"
bytes = "1"
tokio-retry = "0.3"
tracing = "0.1"
ed25519-dalek = "2"
base64 = "0.21"
axum = "0.7"
